// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroller props defaultValue: 0 & 50 type: x & y 1`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  height: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.8rem;
  margin-bottom: 0.2rem;
  margin-top: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0rem",
        "width": "9rem",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 2`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  width: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.8rem;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "9rem",
        "top": "0rem",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 3`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  height: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.8rem;
  margin-bottom: 0.2rem;
  margin-top: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "1.5rem",
        "width": "9rem",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 4`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  width: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.8rem;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "9rem",
        "top": "1.5rem",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 1`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  height: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.8rem;
  margin-bottom: 0.2rem;
  margin-top: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0rem",
        "width": "9rem",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 2`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  height: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.8rem;
  margin-bottom: 0.2rem;
  margin-top: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0rem",
        "width": "9rem",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 3`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  width: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.8rem;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "9rem",
        "top": "0rem",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 4`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  height: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.8rem;
  margin-bottom: 0.2rem;
  margin-top: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "1.5rem",
        "width": "9rem",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 5`] = `
.c1 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 2rem;
  height: 30rem;
  z-index: 996;
}

.c0 {
  width: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.8rem;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 3rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.8rem;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.c2:hover {
  background-color: #7a7a7a;
}

<div
  className="c0  c1"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "30rem",
    }
  }
>
  <div
    className="c2"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "9rem",
        "top": "1.5rem",
      }
    }
  />
</div>
`;

exports[`Scroller props: type is error 1`] = `""`;
